# $Id: Makefile.am,v 1.49 2010/07/30 01:54:10 ellson Exp $ $Revision: 1.49 $
## Process this file with automake to produce Makefile.in


SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
	vpsc rbtree ortho sparse patchwork expr common \
	pack xdot gvc ingraphs topfish glcomp \
	circogen dotgen dotgen2 fdpgen neatogen twopigen sfdpgen osage gvpr

EXTRA_DIST = Makefile.old gvc.vcproj gvc.def
