# $Id: Makefile.am,v 1.5 2009/06/03 01:10:58 ellson Exp $ $Revision: 1.5 $
## Process this file with automake to produce Makefile.in

demodir = $(datadir)/@PACKAGE@/demo

if WITH_TCL
demo_SCRIPTS = entities.tcl
demo_DATA = entities.tcl.README entities.tcl.html
endif

EXTRA_DIST = entities.tcl entities.tcl.README entities.tcl.html
