# $Id: Makefile.am,v 1.5 2009/06/03 01:10:58 ellson Exp $ $Revision: 1.5 $
## Process this file with automake to produce Makefile.in

demodir = $(pkgdatadir)/demo

if WITH_TCL
demo_SCRIPTS = doted.tcl gcat.tcl
demo_DATA = doted.tcl.README gcat.tcl.README
endif

EXTRA_DIST = doted.tcl gcat.tcl doted.tcl.README gcat.tcl.README
