# $Id: Makefile.am,v 1.5 2009/06/03 01:10:58 ellson Exp $ $Revision: 1.5 $
## Process this file with automake to produce Makefile.in

SUBDIRS = pathplan_data

demodir = $(pkgdatadir)/demo

if WITH_TCL
demo_SCRIPTS = pathplan.tcl
demo_DATA = pathplan.tcl.README
endif

EXTRA_DIST = pathplan.tcl pathplan.tcl.README
